--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <option value="black">Black</option>
     </select> -->
 
-    <p>Canvas Size</p>
+    <h3 class="section-header">Canvas Size</h3>
     <label for="width">Width:</label>
     <input type="number" id="width"/>
     <br/>
     <label for="height">Height:</label>
     <input type="number" id="height"/>
     <br/>
-    <button onclick="changeSize()">Update</button>
+    <button class="button" onclick="changeSize()">Update</button>
 
-    <p>Draw Pair</p>
+    <h3 class="section-header">Draw Pair</h3>
     <label for="head">Head:</label>
     <input type="text" id="head"/>
     <select name="headSelect" id="headSelect">
@@ -52,10 +52,10 @@
 
     <br/>
 
-    <button onclick="createPair()">Create Pair</button>
+    <button class="button" onclick="createPair()">Create Pair</button>
 
-    <p>Download Image</p>
-    <button id="download" onclick="downloadImage()">Download</button>
+    <h3 class="section-header">Download Image</h3>
+    <button class="button" id="download" onclick="downloadImage()">Download</button>
   </div>
   <script src="jquery.min.js"></script>
   <script src="jcanvas.min.js"></script>
