--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
 
     <button class="button" onclick="createPair()">Create Pair</button>
 
+    <h3 class="section-header">Add Text</h3>
+    <label for="add-text">Text:</label>
+    <input type="text" id="add-text"/>
+    <br/>
+    <button class="button" onclick="addText()">Add Text</button>
+
     <h3 class="section-header">Download Image</h3>
     <button class="button" id="download" onclick="downloadImage()">Download</button>
   </div>
