added draw label functionality

--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@
     <br/>
     <button class="button" onclick="addText()">Add Text</button>
 
+    <h3 class="section-header">Add Label</h3>
+    <label for="add-text">Label:</label>
+    <input type="text" id="add-label"/>
+    <br/>
+    <button class="button" onclick="addLabel()">Add Label</button>
+
     <h3 class="section-header">Download Image</h3>
     <button class="button" id="download" onclick="downloadImage()">Download</button>
   </div>
